--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,8 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+/Contact.class
+/ContactMenuCLI.class
+/DynOSor.class
+/Note.class
+/NoteMenuCLI.class
